Bytter til Temurin.